--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+*.log
+*.csv
+*.tsv
+*.json
+*.xml
+*.yaml
+*.yml
+*.ini
+*.cfg
+*.env
+*.egg-info/
+dist/
+build/
